@@ -8,6 +8,8 @@ Changed since 1.12.0
 
 Additions
 
+- Added MD5Checksum to document entries
+
 Changes
 
 - Replaced GDataHTTPFetcher with GTMHTTPFetcher
